# carmapy

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst  tutorials.rst
docs/source/notebooks/: my_first_carma.ipynb
src/: __init__.py  carmapy.py  carmapy_main.py  chemistry.py  constants.py  results.py
src/CARMA/: Makefile  make-carma-human.csh  make-carma.csh
src/CARMA/source/base/: Makefile  actdropl.F90  calcrs.F90  carma_condensate_mod.F90  carma_condensate_mod.mod  carma_constants_mod.F90  carma_constants_mod.mod  carma_enums_mod.F90  carma_enums_mod.mod  carma_globaer.h  carma_mod.F90  carma_planet_mod.F90  carma_planet_mod.mod  carma_precision_mod.mod  carma_types_mod.F90  carma_types_mod.mod  carmaelement_mod.F90  carmaelement_mod.mod  carmagas_mod.F90  carmagas_mod.mod  carmagroup_mod.F90  carmagroup_mod.mod  carmasolute_mod.F90  carmastate_mod.F90  carmastate_mod.mod  coagl.F90  coagp.F90  csolve.F90  detrain.F90  downgevapply.F90  downgxfer.F90  evap_ingrp.F90  evap_mono.F90  evap_poly.F90  evapp.F90  freezaerl_koop2000.F90  freezaerl_mohler2010.F90  freezaerl_tabazadeh2000.F90  freezdropl.F90  freezglaerl_murray2010.F90  (+70 more)
src/CARMA/tests/: Makefile  carma_carmapy.F90
src/carmapy/: __init__.py  carmapy.py  chemistry.py  constants.py  example.py  results.py
src/example_data/: example_levels
